--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
         crossorigin="anonymous">
 
 
-    <title>Hello, world!</title>
+    <title>Liri Node App</title>
 </head>
 
 <body>
 
     <div class="container">
-        <h1>Hello, world!</h1>
+        <h1>Please download the repo and run the app within node.</h1>
+        <h2>
+            <a href="https://github.com/paulrydberg/liri-node-app">Repo Link</a>
+        </h2>
     </div>
 
 
